--- a/assets/scss/guestbook.scss
+++ b/assets/scss/guestbook.scss
@@ -100,4 +100,5 @@
 }
 .entry__message{
     margin-top: 0;
+    overflow-wrap: break-word;
 }
